--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "^3.4.0",
+    "scripts": "^0.1.0",
     "start": "^5.1.0"
   },
   "scripts": {
